Se reordeno el codigo. Se organizo en partes para su mejor entendimiento

--- a/stylus/estilos.styl
+++ b/stylus/estilos.styl
@@ -1,3 +1,14 @@
+// Libs
 @import 'libs/reset'
+
+// Variables
 @import 'componentes/variables'
+
+// Game Boy
 @import 'gb/gb'
+@import 'gb/power'
+@import 'gb/pantalla'
+@import 'gb/cruz'
+@import 'gb/opciones'
+@import 'gb/botones'
+@import 'gb/audio'
